--- a/app/views/giftcard/_giftcard_form.html.erb
+++ b/app/views/giftcard/_giftcard_form.html.erb
@@ -19,8 +19,11 @@ end
 
 <fieldset class="no-padding"> 
 
+<%= f.hidden_field :giftcardid, :value => @giftcard.giftcardid %>
+
  <section class="no-margin">
         <div class="row">
+
 
             <section class="col-xs-12">
                
@@ -55,7 +58,9 @@ end
                 <label class="input">
 
                     <i class="icon-append fa fa-barcode"></i>
-                    <input type="text" name="cardnumber" id="cardnumber" value="<%= @giftcard.cardnumber_hash %>" placeholder="Please enter gift card number">
+                    <%= f.text_field :cardnumber_hash, :placeholder=>"Please enter gift card number" %>
+                    <!-- <input type="text" name="cardnumber" id="cardnumber" value="<%= @giftcard.cardnumber_hash %>" placeholder="Please enter gift card number">
+                    -->
                                                                            
                 </label>
 
