--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
         <p class="ls-l visible-lg visible-md" style="width:500px;top:75%; left:80px;font-size:medium;color:white">
             Start typing and select the retailer on your gift card.</p>
         
-        <h3 class="ls-l subtitle strong-400" style="width:500px;top:80%; left:80px;">Store all your gift cards in one location.</h3>
+        <h3 class="ls-l subtitle strong-400" style="width:500px;top:80%; left:80px;">Check your gift card balance instantly.</h3>
         
        
 
@@ -212,9 +212,7 @@
                             
                             <h1 class="c-white">Check Your Gift Card Balance Instantly</h1>
                                 <br/>
-                            <h2 class="c-white">
-                                Store all your gifts cards in one place
-                            </h2>
+                            
                             <span class="clearfix"></span>
                             <br/><br/>
                             <div class="text-center">
