--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -112,11 +112,11 @@
                             <ul class="dropdown-menu">
                                 <li><a tabindex="-1" href="/user/show/<%= session[:userid] %>">My Account</a></li>
 
-                                <% if session[:donationscount] && session[:roleid] == ADMIN_ROLE %>
+                                <% if session[:donationscount] != nil && session[:donationscount] > 0 && session[:roleid] == ADMIN_ROLE %>
                                     <li><a tabindex="-1" href="/donate/index/?userid=<%= session[:userid]%>&viewall=true">View All Donations</a></li>
                                 <% end %>
 
-                                <% if session[:donationscount] %>
+                                <% if session[:donationscount] != nil && session[:donationscount] > 0 %>
                                     <li><a tabindex="-1" href="/donate/index/?userid=<%= session[:userid] %>">My Donations</a></li>
                                 <% end %>
 
