--- a/app/views/giftcard/index.html.erb
+++ b/app/views/giftcard/index.html.erb
@@ -19,7 +19,7 @@
 
     <div class="col-md-6">
         <a href="/giftcard/new" class="btn btn-base btn-icon btn-icon-right fa-gift">
-            <span>Add A New Gift Card</span>
+            <span>Check Gift Card Balance</span>
         </a> 
     </div>
 
