--- a/app/views/layouts/_usergiftcards.html.erb
+++ b/app/views/layouts/_usergiftcards.html.erb
@@ -1,6 +1,6 @@
 
 
-<% if session[:usergiftcardscount] %>
+<% if session[:usergiftcardscount] != nil && session[:usergiftcardscount] > 0 %>
 
 <style>
 .bg-banner-2 {
@@ -41,7 +41,7 @@ color: #fff;
                         <% end %>
                         <br/><br/>
                         <a href="/giftcard/new" class="btn btn-base btn-icon btn-icon-right fa-gift">
-                                <span>Add A New Gift Card</span>
+                                <span>Check Another Balance</span>
                         </a>
                         <br/><br/>
  
