--- a/app/views/donate/index.html.erb
+++ b/app/views/donate/index.html.erb
@@ -76,7 +76,7 @@
                                     </td>
                                     <td><%= donation.charity.charityname %></td>
                                     <td><%= donation.giftcard.merchant.merchantname %></td>
-                                    <td><%= donation.giftcard.cardnumber_hash %></td>
+                                    <td><%= donation.giftcard.cardnumber %></td>
                                     <td>$<%= donation.giftcard.balance %></td>
                                     <td><%= donation.created.to_formatted_s(:db) %></td>
                                     <td>status...</td>
