--- a/app/views/giftcard/edit.html.erb
+++ b/app/views/giftcard/edit.html.erb
@@ -13,7 +13,7 @@
 
 							<div class="wp-block default user-form no-margin">
 	                            <div class="form-header">
-	                                <h2>Tell us about your cause</h2>
+	                                <h2>Check Your Gift Card Balance</h2>
 	                            </div>
 
 						      <div class="form-body">
