--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,8 @@ ul.ui-autocomplete {
     %>
 
         <div class="alert alert-info fade in" style="text-align:center">
-          <%= flash[:notice] %>
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <%= flash[:notice] %>
         </div>
 
       <% end %>
