--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,16 @@ ul.ui-autocomplete {
         overflow-x: auto;
     }
 
+.modal-backdrop.fade {
+opacity: 0;
+filter: alpha(opacity=0);
+}
+.modal-backdrop.in {
+opacity: 0.5;
+filter: alpha(opacity=50);
+}
+
+
 
 </style>
 
@@ -76,8 +86,8 @@ ul.ui-autocomplete {
 
      <% 
         if !flash[:notice].blank? 
-        
     %>
+    
 
         <div class="alert alert-info fade in" style="text-align:center">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -92,6 +102,34 @@ ul.ui-autocomplete {
         <%= render partial: "layouts/footer" %>
     </footer>
 </div>
+
+<!-- Essential styles -->
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css"> 
+    <link rel="stylesheet" href="/assets/fancybox/jquery.fancybox.css?v=2.1.5" media="screen"> 
+     
+    <!-- Boomerang styles -->
+    <link id="wpStylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/css/global-style.css" rel="stylesheet" media="screen">
+        
+
+    <!-- Favicon -->
+    <link href="/images/favicon.png" rel="icon" type="image/png">
+
+    <!-- Assets -->
+    <link rel="stylesheet" href="/assets/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="/assets/sky-forms/css/sky-forms.css">    
+    <!--[if lt IE 9]>
+        <link rel="stylesheet" href="/assets/sky-forms/css/sky-forms-ie8.css">
+    <![endif]-->
+
+    <!-- Required JS -->
+    <script src="<%= CLOUDFRONT_HOST %>/js/jquery.js"></script>
+    <script src="<%= CLOUDFRONT_HOST %>/js/jquery-ui.min.js"></script>
+
+    <!-- Page scripts -->
+    <link rel="stylesheet" href="/assets/layerslider/css/layerslider.css" type="text/css">
+
 
 <!-- Essentials -->
 
@@ -138,6 +176,13 @@ ul.ui-autocomplete {
 <script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/greensock.js" type="text/javascript"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/layerslider.transitions.js" type="text/javascript"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+
+
+
+
+    
+
+
 <!-- Initializing the slider -->
 <script>
     jQuery("#layerslider").layerSlider({
