--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -118,7 +118,13 @@
                         </div>
 
                         <br/>
-                        <a href="/user/edit/<%= @user.userid %>" class="btn btn-xs btn-base btn-icon fa-edit"><span>Edit</span></a>
+
+                        <% if @user.provider != 'facebook' %>
+
+                            <a href="/user/edit/<%= @user.userid %>" class="btn btn-xs btn-base btn-icon fa-edit"><span>Edit</span></a>
+
+                        <% end %>
+
 
                         <% if session[:roleid] == ADMIN_ROLE %>
                              
