redoing git initial

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<title>HotelZoo</title>
+<title>Changefindr</title>
 	
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -9,7 +9,32 @@
     <meta name="robots" content="index, follow">
     
 
-    
+    <!-- Essential styles -->
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css"> 
+    <link rel="stylesheet" href="/assets/fancybox/jquery.fancybox.css?v=2.1.5" media="screen"> 
+     
+    <!-- Boomerang styles -->
+        <link id="wpStylesheet" type="text/css" href="/css/global-style.css" rel="stylesheet" media="screen">
+        
+
+    <!-- Favicon -->
+    <link href="/images/favicon.png" rel="icon" type="image/png">
+
+    <!-- Assets -->
+    <link rel="stylesheet" href="/assets/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="/assets/sky-forms/css/sky-forms.css">    
+    <!--[if lt IE 9]>
+        <link rel="stylesheet" href="/assets/sky-forms/css/sky-forms-ie8.css">
+    <![endif]-->
+
+    <!-- Required JS -->
+    <script src="<%= CLOUDFRONT_HOST %>/js/jquery.js"></script>
+    <script src="<%= CLOUDFRONT_HOST %>/js/jquery-ui.min.js"></script>
+
+    <!-- Page scripts -->
+    <link rel="stylesheet" href="/assets/layerslider/css/layerslider.css" type="text/css">
 
                 <!-- HEADER -->
     <div id="divHeaderWrapper">
@@ -33,9 +58,8 @@
 
                 <a class="navbar-brand" href="/home" title="Boomerang | One template. Infinite solutions">
 
-                    <!-- <img src="/images/HotelZooLogo1.png"  alt="Changefindr"> -->
-                    <span class="primary-letter style-3 base">HZ</span>
-                    <h6 style="text-transform: inherit;">HotelZoo.com</h6>
+                    <img src="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png"  alt="Changefindr">
+                    
                    
                 </a>
             </div>
