--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,6 +59,7 @@
                 <a class="navbar-brand" href="/home" title="Boomerang | One template. Infinite solutions">
 
                     <img src="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png"  alt="Changefindr">
+                    Changefindr
                     
                    
                 </a>
