--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -216,7 +216,9 @@
                     </div>
                     
                     <div class="col-md-3">
-                        <%= render partial: "layouts/sidebar1" %>  
+                        <%= render partial: "widgets/newsletter.html.erb" %>   
+
+                        <%= render partial: "widgets/testimonials.html.erb" %>  
                 
 
                     </div> 
