--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -285,7 +285,7 @@
                                             <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:250px">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
-                                                        <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@merchants[i+k].logo.url%>" class="img-responsive"
+                                                        <img alt="" src="<%=@merchants[i+k].brandLogoImage%>" class="img-responsive"
                                                         style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" >
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
