--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -251,7 +251,7 @@ try {
                             return {
                                 id: m.merchantid,
                                 name: m.merchantname,
-                                logo: m.brandLogoImage
+                                logo: m.logo
                                 
                             };
                         });
@@ -278,7 +278,7 @@ try {
 
             return $('<li class="ui-menu-item-with-icon"></li>')
                 .data("item.ui-autocomplete", item.merchantname)
-                .append('<a><img src="' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
+                .append('<a><img src="<%= CLOUDFRONT_HOST %>/' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
                 .appendTo(ul);
         };
 } catch (Exception) {}
