reverted bhn changes to accomodate thomas run

--- a/app/views/donate/new.html.erb
+++ b/app/views/donate/new.html.erb
@@ -60,7 +60,7 @@
                     <div class="panel panel-default panel-sidebar-1 visible-lg visible-md" id="merchantinfo">
                         <div class="wp-block default">
                         <div class="figure">
-                            <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@donation.charity.logo.url%>" class="img-responsive center-block"
+                            <img alt="" src="<%= CLOUDFRONT_HOST %><%=@donation.charity.logo.url%>" class="img-responsive center-block"
                                             style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" 
                                             >     
                         </div>
