--- a/app/views/giftcard/_giftcard_form.html.erb
+++ b/app/views/giftcard/_giftcard_form.html.erb
@@ -44,7 +44,7 @@ end
                     <i class="icon-append fa fa-credit-card"></i>
 
                     <input type="text" name="giftcardname" 
-                    placeholder="Check Your Gift Card Balance"
+                    placeholder="Enter name of gift card store"
                     name="merchant"
                     id="merchant"
                     value="<%= selectedmerchantname %>">
