--- a/app/views/cause/index.html.erb
+++ b/app/views/cause/index.html.erb
@@ -130,7 +130,7 @@
 
         return $('<li class="ui-menu-item-with-icon"></li>')
             .data("item.ui-autocomplete", item.charityname)
-            .append('<a><img src="<%= CLOUDFRONT_HOST %>/' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
+            .append('<a><img src="<%= CLOUDFRONT_HOST %>' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
             .appendTo(ul);
     };
 
