--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -189,7 +189,7 @@
                                             <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:300px">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
-                                                        <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@causes[i+k].logo.url%>" class="img-responsive"
+                                                        <img alt="" src="<%=@causes[i+k].logo.url%>" class="img-responsive"
                                                         style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" >
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
@@ -318,13 +318,28 @@
                                 <div class="row">
                                     <% (0..3).each do |k| %>
                                         <% if @merchants[i+k] != nil %>
-                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:250px">
+                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:262px">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
-                                                        <img alt="" src="<%=CLOUDFRONT_HOST %><%=@merchants[i+k].logo.url%>" class="img-responsive"
+
+                                                        <%
+                                                            logourl = @merchants[i+k].brandLogoImage
+
+                                                            if logourl == nil || logourl == ''
+
+                                                                logourl = CLOUDFRONT_HOST + '/images/giftcard-3.jpg'
+
+                                                            end
+
+                                                        %>
+
+                                                        <img alt="" src="<%= logourl %>" class="img-responsive"
                                                         style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" >
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
+
+
+
                                                             <a href="/donate/new?merchantid=<%=  @merchants[i+k].merchantid.to_s %>" class="btn btn-xs btn-b-white theater"><i class="fa fa-credit-card"></i> Donate</a>
                                                             <a href="<%= "http://" +  @userhost + "/giftcard/new/" +  @merchants[i+k].merchantid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-check-square-o"></i> Check Balance</a>
                                                         </div>
