--- a/app/views/giftcard/_giftcard_product.html.erb
+++ b/app/views/giftcard/_giftcard_product.html.erb
@@ -15,10 +15,11 @@
                 <div style="text-align: center;">
 
                 
-                    <a href="/giftcard/refreshbalance?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-refresh">
+                    <a href="/giftcard/refreshbalance?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-refresh" onClick="this.disabled=true;">
                         <span>Refresh</span>
                     </a>
-                
+
+                    
                 
                     <br/><br/>
                     <a href="/donate/new?giftcardid=<%= usergiftcard.giftcardid %>" class="btn btn-sm btn-base btn-icon fa-credit-card">
