updated for merchant logo

--- a/app/views/giftcard/_giftcard_form.html.erb
+++ b/app/views/giftcard/_giftcard_form.html.erb
@@ -201,7 +201,7 @@ $("#merchant").autocomplete({
                             return {
                                 id: m.merchantid,
                                 name: m.merchantname,
-                                logo: m.brandLogoImage
+                                logo: m.logo
                                 
                             };
                         });
