--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -323,7 +323,7 @@
                                                     <div class="figure" style="min-height:150px">
 
                                                         <%
-                                                            logourl = @merchants[i+k].brandLogoImage
+                                                            logourl = @merchants[i+k].logo.url
 
                                                             if logourl == nil || logourl == ''
 
