--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -251,7 +251,7 @@ try {
                             return {
                                 id: m.merchantid,
                                 name: m.merchantname,
-                                logo: m.brandLogoImage
+                                logo: m.logo
                                 
                             };
                         });
