--- a/app/views/merchant/index.html.erb
+++ b/app/views/merchant/index.html.erb
@@ -47,7 +47,7 @@
                             <div class="wp-block inverse">
                                 <div class="figure" style="min-height:150px">
                                     <%
-                                        logourl = merchant.brandLogoImage
+                                        logourl = merchant.logo.url
 
                                         if logourl == nil || logourl == ''
 
