--- a/app/views/merchant/new.html.erb
+++ b/app/views/merchant/new.html.erb
@@ -54,7 +54,7 @@
                     </div>
                     <div class="col-md-4">
                     	<!-- SIDEBAR - BLOG -->
-                    	<%= render partial: "layouts/sidebar1" %>                 
+                    	<%= render partial: "layouts/slidebar" %>                 
     				</div>
                 </div>
             </div>
